--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ h1 {
     top: 10rem;
     display: flex;
     flex-direction: row;
+    background-color: #0048ff;
 }
 
 #info {
@@ -48,8 +49,10 @@ h1 {
     height: 60%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    margin-top: 1rem;
+
+
 }
 
 #maNote {
@@ -61,15 +64,45 @@ h1 {
     width: 35%;
     height: 100%;
     border: 1px solid #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #ville {
     width: 50%;
-    height: 10%;
+    height: 15%;
     text-align: center;
+    border-radius: 5px;
 }
 
 #ici {
     width: 100%;
+    height: 30px;
     margin-top: 5rem;
+    display: flex;
+    flex-direction: row;
+}
+
+#but {
+    width: 50%;
+    height: 15%;
+    border-radius: 5px;
+    margin-top: 1rem;
+}
+
+#droite {
+    margin-left: 5px;
+    width: 80%;
+    height: 100%;
+}
+
+#gauche {
+    width: 20%;
+    height: 100%;
+}
+
+#img1 {
+    width: 100%;
+    height: 50%;
 }
