--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1 {
 #interface {
     border: 3px solid #ffffff;
     border-radius: 5px;
-    width: 50%;
+    width: 75rem;
     height: 50%;
     margin:  auto;
     position: relative;
@@ -105,4 +105,19 @@ h1 {
 #img1 {
     width: 100%;
     height: 50%;
+}
+
+.reponses1 {
+    width: 100%;
+    border: 1px solid black;
+    border-radius: 0  10px 10px 0;
+}
+
+.reponses {
+    width: 100%;
+    height: 25px;
+    border: 1px solid black;
+    border-radius: 10px 0 0 10px ;
+    text-align: center;
+
 }
